--- a/app/build.gradle
+++ b/app/build.gradle
@@ -140,6 +140,9 @@ dependencies {
     implementation "androidx.work:work-runtime:$work_version"
     implementation "androidx.work:work-runtime-ktx:$work_version"
 
+    // startup
+    implementation "androidx.startup:startup-runtime:1.0.0-alpha02"
+
     implementation 'androidx.multidex:multidex:2.0.1'
 
     implementation project(':zkplib')
