添加手动初始化的start up的demo

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.zkp.breath">
 
     <!--  Manifest提示GoogleAppIndexingWarning  https://www.jianshu.com/p/ba43bf1ba7c2-->
@@ -204,6 +205,31 @@
         <service
             android:name=".LibraryManagerService"
             android:process=":aidl_remote" />
+
+        <provider
+            android:name="androidx.startup.InitializationProvider"
+            android:authorities="${applicationId}.androidx-startup"
+            android:exported="false"
+            tools:node="merge">
+
+            <!-- 自动初始化 -->
+            <meta-data
+                android:name="com.zkp.breath.jetpack.startup.StartUpLibraryC"
+                android:value="androidx.startup" />
+        </provider>
+
+        <provider
+            android:name="androidx.startup.InitializationProvider"
+            android:authorities="${applicationId}.androidx-startup"
+            android:exported="false"
+            tools:node="merge">
+
+            <!-- 手动初始化 -->
+            <meta-data
+                android:name="com.zkp.breath.jetpack.startup.StartUpLibrary3"
+                android:value="androidx.startup"
+                tools:node="remove" />
+        </provider>
 
     </application>
 
