--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -206,17 +206,17 @@
             android:name=".LibraryManagerService"
             android:process=":aidl_remote" />
 
-        <provider
-            android:name="androidx.startup.InitializationProvider"
-            android:authorities="${applicationId}.androidx-startup"
-            android:exported="false"
-            tools:node="merge">
+<!--        <provider-->
+<!--            android:name="androidx.startup.InitializationProvider"-->
+<!--            android:authorities="${applicationId}.androidx-startup"-->
+<!--            android:exported="false"-->
+<!--            tools:node="merge">-->
 
-            <!-- 自动初始化 -->
-            <meta-data
-                android:name="com.zkp.breath.jetpack.startup.StartUpLibraryC"
-                android:value="androidx.startup" />
-        </provider>
+<!--            &lt;!&ndash; 自动初始化 &ndash;&gt;-->
+<!--            <meta-data-->
+<!--                android:name="com.zkp.breath.jetpack.startup.StartUpLibraryC"-->
+<!--                android:value="androidx.startup" />-->
+<!--        </provider>-->
 
         <provider
             android:name="androidx.startup.InitializationProvider"
