--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -186,7 +186,7 @@
         <activity android:name=".component.activity.jetpack.LiveDataActivity" />
         <activity android:name=".component.activity.jetpack.RoomActivity" />
         <activity android:name=".component.activity.jetpack.WorkManagerActivity" />
-        <activity android:name=".component.activity.jetpack.AppStartupActivity" />
+        <activity android:name=".component.activity.jetpack.StartupActivity" />
 
         <service
             android:name=".component.service.IntentServiceA"
