--- a/app/build.gradle
+++ b/app/build.gradle
@@ -168,15 +168,15 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
-    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
-    implementation 'com.jakewharton:butterknife:10.1.0'
+    annotationProcessor "com.jakewharton:butterknife-compiler:$butterknife_version"
+    implementation "com.jakewharton:butterknife:$butterknife_version"
 
     implementation 'org.greenrobot:greendao:3.2.2'
 
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
-    implementation 'com.squareup.retrofit2:retrofit:2.8.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 
     // 测试集成腾讯云IM（tuikit版本，包含UI）
 //    implementation 'com.tencent.imsdk:tuikit:4.5.45'
