--- a/build.gradle
+++ b/build.gradle
@@ -19,12 +19,11 @@ buildscript {
         maven { url 'https://dl.bintray.com/umsdk/release' }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:${gradle_version}"
+        classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
         classpath "com.jakewharton:butterknife-gradle-plugin:$butterknife_version"
         classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
-        classpath 'com.android.tools.build:gradle:3.6.1'
         classpath 'com.didichuxing.doraemonkit:doraemonkit-plugin:3.1.5'
     }
 }
