databinding的例子修改包名和类名

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -94,11 +94,6 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".component.activity.mvx.MvvmActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-            </intent-filter>
-        </activity>
 
         <activity android:name=".component.activity.DatabaseActivity">
             <intent-filter>
@@ -188,6 +183,7 @@
         <activity android:name=".component.activity.jetpack.WorkManagerActivity" />
         <activity android:name=".component.activity.jetpack.StartupActivity" />
         <activity android:name=".component.activity.jetpack.ViewBindingActivity" />
+        <activity android:name=".component.activity.jetpack.DataBindingActivity" />
 
         <service
             android:name=".component.service.IntentServiceA"
@@ -207,17 +203,17 @@
             android:name=".LibraryManagerService"
             android:process=":aidl_remote" />
 
-<!--        <provider-->
-<!--            android:name="androidx.startup.InitializationProvider"-->
-<!--            android:authorities="${applicationId}.androidx-startup"-->
-<!--            android:exported="false"-->
-<!--            tools:node="merge">-->
+        <!--        <provider-->
+        <!--            android:name="androidx.startup.InitializationProvider"-->
+        <!--            android:authorities="${applicationId}.androidx-startup"-->
+        <!--            android:exported="false"-->
+        <!--            tools:node="merge">-->
 
-<!--            &lt;!&ndash; 自动初始化 &ndash;&gt;-->
-<!--            <meta-data-->
-<!--                android:name="com.zkp.breath.jetpack.startup.StartUpLibraryC"-->
-<!--                android:value="androidx.startup" />-->
-<!--        </provider>-->
+        <!--            &lt;!&ndash; 自动初始化 &ndash;&gt;-->
+        <!--            <meta-data-->
+        <!--                android:name="com.zkp.breath.jetpack.startup.StartUpLibraryC"-->
+        <!--                android:value="androidx.startup" />-->
+        <!--        </provider>-->
 
         <provider
             android:name="androidx.startup.InitializationProvider"
