--- a/app/build.gradle
+++ b/app/build.gradle
@@ -139,6 +139,9 @@ dependencies {
     annotationProcessor "androidx.room:room-compiler:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
+    // paging
+    implementation "androidx.paging:paging-runtime:$paging_version"
+
     // Work
     implementation "androidx.work:work-runtime:$work_version"
     implementation "androidx.work:work-runtime-ktx:$work_version"
