--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -181,6 +181,7 @@
         <activity android:name=".component.activity.jetpack.LifecycleActivity" />
         <activity android:name=".component.activity.jetpack.LiveDataActivity" />
         <activity android:name=".component.activity.jetpack.RoomActivity" />
+        <activity android:name=".component.activity.jetpack.PagingActivity" />
         <activity android:name=".component.activity.jetpack.WorkManagerActivity" />
         <activity android:name=".component.activity.jetpack.StartupActivity" />
         <activity android:name=".component.activity.jetpack.ViewBindingActivity" />
