--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
     ext.lifecycle_version = "2.2.0"
     ext.room_version = "2.2.5"
     ext.work_version = "2.4.0"
-    ext.hilt_version = "2.28-alpha"
+    ext.hilt_version = '2.28.3-alpha'
     ext.paging_version = "2.1.2"
     ext.butterknife_version = "10.2.1"
 
