--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -82,6 +82,7 @@
         <activity android:name=".component.activity.weight.MotionLayoutActivity" />
         <activity android:name=".component.activity.weight.RecycleViewActivity" />
         <activity android:name=".component.activity.weight.ViewPager2Activity" />
+        <activity android:name=".component.activity.weight.ImageViewScaleTypeActivity" />
 
         <activity android:name=".component.activity.mvx.MvcActivity">
             <intent-filter>
