--- a/app/build.gradle
+++ b/app/build.gradle
@@ -229,7 +229,7 @@ dependencies {
     debugImplementation 'com.github.markzhai:blockcanary-android:1.5.0'
     releaseImplementation 'com.github.markzhai:blockcanary-no-op:1.5.0'
 
-    // DoKit
+    // DoKit(3.1.6有坑，不要升到这个版本)
     debugImplementation "com.didichuxing.doraemonkit:doraemonkit:3.1.5"
     releaseImplementation "com.didichuxing.doraemonkit:doraemonkit-no-op:3.1.5"
 
