--- a/app/build.gradle
+++ b/app/build.gradle
@@ -255,4 +255,5 @@ dependencies {
 
     // switchbutton
     implementation 'com.kyleduo.switchbutton:library:2.0.2'
+    implementation 'com.github.liys666666:LSwitch:V1.0.4'
 }
