--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -86,6 +86,7 @@
         <activity android:name=".component.activity.weight.ImageViewAdjustViewBoundsActivity" />
         <activity android:name=".component.activity.weight.SwitchActivity" />
         <activity android:name=".component.activity.weight.ButtonActivity" />
+        <activity android:name=".component.activity.weight.TextViewActivity" />
 
         <activity android:name=".component.activity.mvx.MvcActivity">
             <intent-filter>
