--- a/app/build.gradle
+++ b/app/build.gradle
@@ -256,4 +256,7 @@ dependencies {
     // switchbutton
     implementation 'com.kyleduo.switchbutton:library:2.0.2'
     implementation 'com.github.liys666666:LSwitch:V1.0.4'
+
+    // app抓包工具（CaptureInfoInterceptor）
+    debugImplementation 'com.github.DingProg.NetworkCaptureSelf:library:v1.0.2'
 }
