--- a/app/build.gradle
+++ b/app/build.gradle
@@ -259,4 +259,7 @@ dependencies {
 
     // app抓包工具（CaptureInfoInterceptor）
     debugImplementation 'com.github.DingProg.NetworkCaptureSelf:library:v1.0.2'
+
+    // 第三方tabLayout
+    implementation 'com.github.hackware1993:MagicIndicator:1.7.0'
 }
