--- a/app/build.gradle
+++ b/app/build.gradle
@@ -168,6 +168,11 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
+    // Preferences DataStore
+    implementation "androidx.datastore:datastore-preferences:1.0.0-alpha04"
+    // Proto DataStore
+    implementation "androidx.datastore:datastore-core:1.0.0-alpha04"
+
     implementation 'androidx.multidex:multidex:2.0.1'
 
     implementation project(':zkplib')
