--- a/app/build.gradle
+++ b/app/build.gradle
@@ -203,7 +203,7 @@ dependencies {
 //    implementation 'com.tencent.imsdk:tuikit:4.5.45'
 
     // sp升级版框架（基于内存映射原理）
-    implementation 'com.tencent:mmkv:1.1.1'
+    implementation 'com.tencent:mmkv-static:1.2.5'
 
     // BaseRecyclerViewAdapterHelper
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.2'
