--- a/app/build.gradle
+++ b/app/build.gradle
@@ -134,6 +134,7 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+
     // 依赖协程核心库
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlin_coroutines"
     // 依赖当前平台所对应的平台库
@@ -167,6 +168,9 @@ dependencies {
     // hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+
+    // datastore  （和协程依赖有冲突，可能是alpha版本的问题）
+//    implementation "androidx.datastore:datastore-preferences:1.0.0-alpha04"
 
     implementation 'androidx.multidex:multidex:2.0.1'
 
