--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ buildscript {
     repositories {
         google()
 //        jcenter()
+        jcenter { url 'https://maven.aliyun.com/repository/jcenter' }
         maven { url "https://jitpack.io" }
         maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
@@ -36,6 +37,7 @@ allprojects {
     repositories {
         google()
 //        jcenter()
+        jcenter { url 'https://maven.aliyun.com/repository/jcenter' }
         mavenCentral()
         maven { url "https://jitpack.io" }
         maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
