--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -90,6 +90,7 @@
         <activity android:name=".component.activity.weight.TabLayoutActivity" />
         <activity android:name=".component.activity.weight.ScrollViewActivity" />
         <activity android:name=".component.activity.weight.LottieActivity" />
+        <activity android:name=".component.activity.weight.SvgaActivity" />
 
         <activity android:name=".component.activity.mvx.MvcActivity">
             <intent-filter>
