--- a/app/build.gradle
+++ b/app/build.gradle
@@ -268,7 +268,7 @@ dependencies {
 
 
     def fragment_version = "1.2.5"
-    implementation "androidx.fragment:fragment:$fragment_version"
+//    implementation "androidx.fragment:fragment:$fragment_version"
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
 
 }
