--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -185,9 +185,9 @@
         <activity android:name=".component.activity.MMKVActivity" />
 
         <activity android:name=".component.activity.ComponentActivity" />
-        <activity android:name=".component.activity.FragmentDemoActivity" />
-        <activity android:name=".component.activity.VpFragmentActivity" />
-        <activity android:name=".component.activity.Vp2FragmentActivity" />
+        <activity android:name=".component.activity.fragment.FragmentDemoActivity" />
+        <activity android:name=".component.activity.fragment.VpFragmentActivity" />
+        <activity android:name=".component.activity.fragment.Vp2FragmentActivity" />
 
         <activity android:name=".component.activity.debugs.DebugActivity" />
 
