--- a/app/build.gradle
+++ b/app/build.gradle
@@ -140,16 +140,17 @@ dependencies {
     // 依赖当前平台所对应的平台库
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutines"
 
-    // Lifecycles only (without ViewModel or LiveData)
+    // Lifecycle only (without ViewModel or LiveData)
 //    implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
+    // Lifecycle的观察者java8写法(DefaultLifecycleObserver)
+    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
+
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     // LiveData
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     // ProcessLife
     implementation "androidx.lifecycle:lifecycle-process:$lifecycle_version"
-    // alternately - if using Java8, use the following instead of lifecycle-compiler
-    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
 
     // Room
     implementation "androidx.room:room-runtime:$room_version"
