--- a/app/build.gradle
+++ b/app/build.gradle
@@ -159,7 +159,8 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
 
     // paging
-    implementation "androidx.paging:paging-runtime:$paging_version"
+//    implementation "androidx.paging:paging-runtime:$paging_version"
+    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
 
     // Work
 //    implementation "androidx.work:work-runtime:$work_version"
