--- a/app/build.gradle
+++ b/app/build.gradle
@@ -277,4 +277,7 @@ dependencies {
 //    implementation "androidx.fragment:fragment:$fragment_version"
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
 
+    def activity_version = "1.2.0-alpha04"
+//    implementation "androidx.activity:activity:$activity_version"
+    implementation "androidx.activity:activity-ktx:$activity_version"
 }
