--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -205,6 +206,7 @@
         <activity android:name=".component.activity.jetpack.ViewBindingActivity" />
         <activity android:name=".component.activity.jetpack.DataBindingActivity" />
         <activity android:name=".component.activity.jetpack.DataStoreActivity" />
+        <activity android:name=".component.activity.jetpack.ResultsApiActivity" />
 
         <service
             android:name=".component.service.IntentServiceA"
