--- a/app/build.gradle
+++ b/app/build.gradle
@@ -280,4 +280,8 @@ dependencies {
     def activity_version = "1.2.0-alpha04"
 //    implementation "androidx.activity:activity:$activity_version"
     implementation "androidx.activity:activity-ktx:$activity_version"
+
+    def nav_version = "2.3.2"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 }
