--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -199,6 +199,7 @@
         <activity android:name=".component.activity.jetpack.JetPackActivity" />
         <activity android:name=".component.activity.jetpack.ViewModelActivity" />
         <activity android:name=".component.activity.jetpack.LifecycleActivity" />
+        <activity android:name=".component.activity.jetpack.ProcessLifecycleActivity" />
         <activity android:name=".component.activity.jetpack.LiveDataActivity" />
         <activity android:name=".component.activity.jetpack.RoomActivity" />
         <activity android:name=".component.activity.jetpack.PagingActivity" />
