--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -79,6 +79,7 @@
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
         </activity>
+        <activity android:name=".component.activity.weight.WeightActivity" />
         <activity android:name=".component.activity.weight.ConstraintLayoutActivity" />
         <activity android:name=".component.activity.weight.MotionLayoutActivity" />
         <activity android:name=".component.activity.weight.RecycleViewActivity" />
@@ -155,7 +156,9 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".component.activity.androidr.R30Activity" />
         <activity android:name=".component.activity.androidr.ScopedStorageActivity" />
+        <activity android:name=".component.activity.androidr.ToastActivity" />
 
         <activity android:name=".component.activity.arouter.ARouterActivity" />
         <activity android:name=".component.activity.arouter.Test1ArouterActivity" />
