--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -93,7 +93,7 @@
         <activity android:name=".component.activity.weight.ScrollViewActivity" />
         <activity android:name=".component.activity.weight.LottieActivity" />
         <activity android:name=".component.activity.weight.SvgaActivity" />
-        <activity android:name=".jetpack.navigation.NavigationActivity" />
+        <activity android:name=".component.activity.weight.EditTextActivity" />
 
         <activity android:name=".component.activity.mvx.MvcActivity">
             <intent-filter>
@@ -214,6 +214,7 @@
         <activity android:name=".component.activity.jetpack.DataStoreActivity" />
         <activity android:name=".component.activity.jetpack.ResultsApiActivity" />
         <activity android:name=".component.activity.jetpack.ResultsApiActivity$ResultsApiSecondActivity" />
+        <activity android:name=".component.activity.jetpack.NavigationActivity" />
 
         <service
             android:name=".component.service.IntentServiceA"
