--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,8 +39,8 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         ndk {
-            // 设置支持的SO库架构
-            abiFilters 'arm64-v8a', 'armeabi-v7a'
+            // 设置支持的SO库架构('x86'是针对虚拟器使用的)
+            abiFilters 'arm64-v8a', 'armeabi-v7a', 'x86'
         }
 
         javaCompileOptions {
@@ -271,7 +271,7 @@ dependencies {
     implementation 'com.github.yyued:SVGAPlayer-Android:2.5.14'
 
     // dataBinding和viewBinding消除模版代码的库
-    implementation 'com.hi-dhl:binding:1.0.1'
+    implementation 'com.hi-dhl:binding:1.0.7'
 
     def fragment_version = "1.2.5"
 //    implementation "androidx.fragment:fragment:$fragment_version"
