--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
         hilt_version = '2.28.3-alpha'
         paging_version = "2.1.2"
         butterknife_version = "10.2.3"
+        walle_version = "1.1.7"
     }
 
     repositories {
@@ -30,6 +31,7 @@ buildscript {
         classpath "com.jakewharton:butterknife-gradle-plugin:$butterknife_version"
         classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
         classpath 'com.didichuxing.doraemonkit:doraemonkit-plugin:3.1.5'
+        classpath "com.meituan.android.walle:plugin:$walle_version"
     }
 }
 
