添加注释声明

--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,11 @@
 #Tue Aug 27 16:00:56 CST 2019
+#Gradle压缩包解压后存储的主目录(可点击“File-Settings-Build,Execution,Deployment-Gradle”查看)；
 distributionBase=GRADLE_USER_HOME
+#Gradle压缩包解压后具体路径目录
 distributionPath=wrapper/dists
+#Gradle压缩包存储的主目录
 zipStoreBase=GRADLE_USER_HOME
+#Gradle压缩包具体存储的路径目录
 zipStorePath=wrapper/dists
+#Gradle版本
 distributionUrl=https\://services.gradle.org/distributions/gradle-5.6.4-all.zip
