--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -100,6 +100,7 @@
         <activity android:name=".component.activity.weight.LottieActivity" />
         <activity android:name=".component.activity.weight.SvgaActivity" />
         <activity android:name=".component.activity.weight.EditTextActivity" />
+        <activity android:name=".component.activity.weight.custom.CustomViewActivity" />
         <activity android:name=".component.activity.weight.qmui.QMUIActivity" />
         <activity android:name=".component.activity.weight.qmui.QMUIButtonActivity" />
         <activity android:name=".component.activity.weight.qmui.QMUIDialogActivity" />
