添加柯基工具类的入口

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -236,6 +236,9 @@
 
         <activity android:name=".component.activity.BackForegroundActivity" />
 
+        <activity android:name=".component.activity.blankj.BlankjActivity" />
+        <activity android:name=".component.activity.blankj.LogActivity" />
+
         <service
             android:name=".component.service.IntentServiceA"
             android:exported="false" />
